--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,10 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "8367096739:AAFdkGWXbpr7I5HKs-qy-7j2L7Qpl8wzftg"                              # Require restart after changing it while bot running
+OWNER_ID = "7354647629"                               # Require restart after changing it while bot running
+TELEGRAM_API = "19863702"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "6d48cb362a97a43cfc944fd5c0f917f9"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
